# events

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
src/events/: abc.py  config.py  consumer.py  exceptions.py  producer.py  registry.py
src/events/transports/: queue.py  rabbitmq.py
tests/: conftest.py  test_events.py
tests/abc/event/: conftest.py  test_dump.py  test_load.py
tests/consumer/: test_consume.py
tests/producer/: test_send.py
tests/registry/: conftest.py  test_dump.py  test_load_from_dict.py
